--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iguana - Image processor</title>
-    <link href="ui/libraries/vuetify.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@3.3.5/dist/vuetify.min.css" rel="stylesheet" />
     <link href="ui/css/app.css" rel="stylesheet" />
-    <link href="ui/libraries/materialdesignicons.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
     <style>
       /* Hide scrollbar for Chrome, Safari and Opera */
       body::-webkit-scrollbar {
@@ -32,7 +32,7 @@
       </v-app>
     </div>
     <script type="module" src="index.mjs"></script>
-    <script src="ui/libraries/vue.global.js"></script>
-    <script src="ui/libraries/vuetify.min.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.5/dist/vuetify.min.js"></script>
   </body>
 </html>
