--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iguana - Image processor</title>
     <link href="https://cdn.jsdelivr.net/npm/vuetify@3.3.5/dist/vuetify.min.css" rel="stylesheet" />
-    <link href="ui/css/app.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
+    <link href="ui/css/app.css" rel="stylesheet" />
+    <link href="ui/css/prism.css" rel="stylesheet"/>
     <style>
       /* Hide scrollbar for Chrome, Safari and Opera */
       body::-webkit-scrollbar {
@@ -32,6 +33,7 @@
       </v-app>
     </div>
     <script type="module" src="index.mjs"></script>
+    <scritp src="ui/libs/prism.js"></scritp>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.5/dist/vuetify.min.js"></script>
   </body>
