--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </v-app>
     </div>
     <script type="module" src="index.mjs"></script>
-    <scritp src="ui/libs/prism.js"></scritp>
+    <script src="ui/libs/prism.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@3.3.5/dist/vuetify.min.js"></script>
   </body>
